修复读取今日步数数据可能错误的原因&&无法修改步数的原因可能为未对设备进行核心破解--1912281255

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:layout_above="@id/btnAddSteps"
         android:layout_toRightOf="@id/tvAddSteps"
         android:hint="@string/text_add_steps_hint"
-        android:inputType="number"
+        android:inputType="numberSigned"
         android:textSize="@dimen/text_size" />
 
     <Button
